[package]
name = "whatsappweb"
version = "0.0.2"
authors = ["Christoph Walcher <christoph-wa@gmx.de>"]
build = "build.rs"
description = "WIP Whatsapp Web API Client"
repository = "https://github.com/wiomoc/whatsappweb-rs"
readme = "README.md"
categories = ["api"]
license = "MIT"

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 16

[dependencies]
ws = { version = "0.9.2", features = ["ssl"] }
log = "0.4.1"
simple_logger = "4.1.0"
url = "2.3.1"
json = "0.12.4"
ring = "0.16.20"
base64 = "0.21.0"
qrcode = "0.12.0"
image = "0.24.6"
untrusted = "0.9.0"
rust-crypto = "0.2.36"
serde = "1.0.160"
serde_derive = "1.0.160"
bincode = "1.3.3"
byteorder = "1.4.3"
protobuf = "3.2.0"
chrono = "0.4.24"
reqwest = { version = "0.11.16", optional = true }
error-chain = "0.12.4"
jpeg-encoder = "0.5.1"

[features]
default = ["media"]
"media" = ["reqwest"]

[build-dependencies]
protobuf-codegen-pure = "2.0.4"
